master: change styles checkbox

--- a/pages/registration.html
+++ b/pages/registration.html
@@ -35,11 +35,11 @@
                                name="password"
                                placeholder="Password"
                                class="registration-input">
-                        <label>
-                            <input type="checkbox"
-                                   name="consent"
-                                   value="true"
-                                   class="registration-checkbox">
+                        <input type="checkbox"
+                               name="consent"
+                               value="true"
+                               id="registration-checkbox">
+                        <label for="registration-checkbox" class="consent-custom-checkbox">
                             I have read the <a href="#" class="bottom-line bottom-line-consent">Terms and Conditions.</a>
                         </label>
                         <button type="button" class="registration-form-btn">
