--- a/pages/registration.html
+++ b/pages/registration.html
@@ -12,9 +12,7 @@
             <section class="registration-box">
                 <div class="registration-container">
                     <div class="actions">
-                        <button type="button" class="back-btn">
-                            <i class="fas fa-arrow-left"></i></i>Go back
-                        </button>
+                        <button type="button" class="back-btn">Go back</button>
                         <p>Have an account? <a href="#" class="bottom-line">Sign in</a></p>
                     </div>
                     <h1 class="sign-up">Sign up to Brainalityca</h1>
@@ -64,6 +62,5 @@
             </section>
         </section>
     </div>
-<script src="https://kit.fontawesome.com/627834cba8.js" crossorigin="anonymous"></script>
 </body>
 </html>
